fix: increase modal Z-index

--- a/src/modules/bottom-feature/style.module.scss
+++ b/src/modules/bottom-feature/style.module.scss
@@ -7,5 +7,5 @@
   padding-right: 10px;
   justify-content: space-between;
   height: 45px;
-  z-index: 1;
+  z-index: 2;
 }
